<resources>
    <string name="app_name">좋은습관 해빗투굿</string>
    <string name="my_default_web_client_id" translatable="false">1035578351758-tqdabihakactunf7efrnac5gjtofblh4.apps.googleusercontent.com</string>
    <string name="btn_nav_plus1">플러스원</string>
    <string name="btn_nav_habits">내습관</string>
    <string name="btn_nav_point">상점</string>
    <string name="btn_nav_dashboard">내정보</string>
    <string name="activity_ranking_board">GP 순위</string>
    <string name="activity_edit_memo">메모 편집</string>
    <string name="tab_text_1">습관</string>
    <string name="tab_text_2">포인트몰</string>
    <string name="tab_text_3">포인트보드</string>
    <string name="action_settings">설정</string>
    <string name="action_upload">클라우드에 업로드</string>
    <string name="action_download">클라우드에서 다운로드</string>
    <string name="action_faq">자주하는 질문</string>
    <string name="action_refresh">새로고침</string>
    <string name="action_my_wallet">내지갑</string>
    <string name="action_help">고객지원</string>
    <string name="action_homepage">홈페이지</string>
    <string name="action_info">도움말</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_title">Habit Title</string>
    <string name="date">2018.10.15</string>
    <string name="iv_menu">Menu</string>
    <string name="iv_reminder">ivReminder</string>
    <string name="tv_streak">0</string>
    <string name="tv_reminder">1</string>
    <string name="tv_sunday">1</string>
    <string name="tv_monday">2</string>
    <string name="tv_tuesday">3</string>
    <string name="tv_wednesday">4</string>
    <string name="tv_thursday">5</string>
    <string name="tv_friday">6</string>
    <string name="tv_saturday">7</string>
    <string name="title_activity_settings">Settings</string>
    <string name="gp_switch_desc">GP 적립하기를 해제하면 GP 보상이 되지 않습니다.\n보상받은 GP는 상점이나 내정보에서 확인할 수 있습니다. </string>
    <string name="gp_switch_text">GP 적립하기</string>
    <string name="gp_1plus_toast_msg">1 GP를 받았습니다.</string>
    <string name="reminder_title">알림</string>
    <string name="reminder_summary">알림음 및 진동</string>
    <string name="backup_title">자동 백업</string>
    <string name="backup_summary">클라우드 자동 백업 일정</string>
    <string name="quote_title">해빗투굿 생각</string>
    <string name="quote_summary">해빗투굿 생각 수신</string>
    <string name="gpoint_title">G.Point</string>
    <string name="gpoint_summary">Good Point</string>
    <string name="about_title">해빗투굿 블로그</string>
    <string name="about_uri">https://blog.naver.com/habit2good</string>
    <string name="about_summary">About</string>
    <string name="plus1_about_uri">https://blog.naver.com/habit2good/221532578829</string>
    <string name="habit_about_uri">https://blog.naver.com/habit2good/221536274059</string>
    <string name="habits_help_uri">https://blog.naver.com/habit2good/221453328501</string>
    <string name="pointmall_about_uri">https://blog.naver.com/habit2good/221533279878</string>
    <string name="dashboard_about_uri">https://blog.naver.com/habit2good/221533254770</string>
    <string name="habit2good_uri">https://play.google.com/store/apps/details?id=kr.co.gubed.habit2good</string>
    <string name="backup_schedule_title">자동 백업 시간</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">사람은 습관을 만들고 습관은 사람을 만든다.</string>
    <string name="nav_header_subtitle">서로 의견이 충돌할 때 화를 내는 것은 의미가 없다. 의견 충돌은 위협이 아니라 배우는 기회다. \n승자는 무엇인가를 배운 후 생각을 바꾼 사람이다.\n의견 충돌은 아직 개발되지 않은 잠재력의 거대한 원천이 된다.\n\n- 레이 달리오, ‘원칙’에서</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ht_contents">사람은 습관을 만들고\n습관은 사람을 만든다.\n</string>
    <string name="ht_author">무명</string>
    <string name="ht_description">서로 의견이 충돌할 때 화를 내는 것은 의미가 없다. 의견 충돌은 위협이 아니라 배우는 기회다. \n승자는 무엇인가를 배운 후 생각을 바꾼 사람이다.\n의견 충돌은 아직 개발되지 않은 잠재력의 거대한 원천이 된다.\n\n- 레이 달리오, ‘원칙’에서</string>
    <string name="set">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_partners_to_messages">Add partners to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="my_nickname">없음</string>
    <string name="check_nickname_btn">중복 확인</string>
    <string name="name_of_mypoint">나의 포인트:</string>
    <string name="default_mypoint">100,000</string>
    <string name="scale_point">GP</string>
    <string name="balance_display">잔액</string>
    <string name="scale_trophy">트로피</string>
    <string name="level_0">나의 실적</string>
    <string name="partner_title">파트너 실적</string>
    <string name="level_1">1레벨</string>
    <string name="level_2">2레벨</string>
    <string name="level_3">3레벨</string>
    <string name="level_4">4레벨</string>
    <string name="level_5">5레벨</string>
    <string name="level_6">6레벨</string>
    <string name="iv_numofok_desc">Number of OK</string>
    <string name="iv_successratio_desc">success ratio</string>
    <string name="img_event_tag_desc">event tag</string>
    <string name="iv_down_desc">down button for expansion</string>
    <string name="iv_reminder_desc">reminder icon</string>
    <string name="iv_up_desc">up button for folding</string>
    <string name="goal_img_description">목표를 시각화할 수 있는 사진을 등록하세요</string>
    <string name="habit_name">* 습관명</string>
    <string name="habit_name_hint">윗몸 일으키기 하루 100개</string>
    <string name="habit_goal">* 목표 (구체적일수록 성공율이 높아집니다)</string>
    <string name="habit_goal_hint">체지방율 30% 이하</string>
    <string name="habit_signal">* 습관(반복적인 행동) 유발 신호</string>
    <string name="habit_signal_hint">졸릴 때, TV 시청, 기상 전/후, 식 후</string>
    <string name="habit_reward">* 습관(반복적인 행동)을 통해 얻는 보상</string>
    <string name="habit_reward_hint">만족감, 건강미, 자신감</string>
    <string name="habit_category">분류</string>
    <string name="habit_action_plan">실행 일정</string>
    <string name="habit_start_date">시작일</string>
    <string name="habit_end_date">종료일</string>
    <string name="habit_cycle">실행 주기</string>
    <string name="habit_count">반복 횟수 (실천 가능한 수치로 시작해서 점점 늘려 주세요)</string>
    <string name="habit_count_hint">100</string>
    <string name="habit_unit">단위 (반복 횟수에 해당하는 단위를 입력하세요)</string>
    <string name="habit_unit_hint">회</string>
    <string name="alarm_time">알람 시간</string>
    <string name="alarm_name">알람 이름</string>
    <string name="alarm_name_hint">설정 안 함</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="repeated_day">요일 반복</string>
    <string name="tilde">" ~ "</string>
    <string name="success_ratio">100%</string>
    <string name="my_goal">나의 목표</string>
    <string name="signal">습관 유발 신호</string>
    <string name="reward">습관을 통해 얻는 보상</string>
    <string name="action_plan">목표를 이루기 위한 실행계획</string>
    <string name="pie_view_result">21일중 20일 성공</string>
    <string name="pie_view_schedule">2018.08.12~2018.09.06 (총 21회)</string>
    <string name="ask_join_with_us">가입이 필요한 서비스 입니다.\n여기를 눌러 시작하세요.</string>
    <string name="hint_userid">ID를 입력하세요.</string>
    <string name="title_ranking">순위</string>
    <string name="title_userid">아이디</string>
    <string name="title_gpoint_imsi">지포인트</string>
    <string name="title_trophy_imsi">트로피</string>
    <string name="ranking">1,000</string>
    <string name="userid">shootinglikeme</string>
    <string name="gpoint_imsi">1,000,000</string>
    <string name="trophy_imsi">1000,000</string>
    <string name="menu_mypostion">나의 순위</string>
    <string name="menu_top">탑 랭커</string>
    <string name="menu_search">검색</string>
    <string name="nav_all">전체보기</string>
    <string name="nav_ongoing">진행중인 습관</string>
    <string name="nav_expired">만료된 습관</string>
    <string name="nav_walkthrough">해빗투굿 가이드</string>
    <string name="nav_settings">설정</string>
    <string name="nav_share">파트너 초대</string>
    <string name="nav_send">고객지원</string>
    <string name="notislide1_name">해빗투굿 생각</string>
    <string name="notislide2_name">친구 초대 이벤트</string>
    <string name="notislide3_name">습관은요...!</string>
    <string name="notislide4_name">좋은 습관 만들기</string>
    <string name="app_names">좋은습관 해빗투굿</string>
    <string name="app_names_desc">해빗투굿 접근성 설정을 활성화해주세요.</string>
    <string name="support_mail">habit2good@gmail.com</string>
    <string name="title_get_gpoint">바로 적립</string>
    <string name="title_get_gpoint_sub">바로 적립 가능한\n다양한 광고</string>
    <string name="title_partner">파트너 초대</string>
    <string name="title_partner_sub1">가입</string>
    <string name="title_partner_sub1_desc">+100 GP</string>
    <string name="title_partner_sub2">적립</string>
    <string name="title_partner_sub2_desc">+5<![CDATA[%]]> GP</string>
    <string name="title_event">이벤트</string>
    <string name="title_event_sub">행운과 함께, 풍성한 혜택</string>
    <string name="exit">종료</string>
    <string name="faq">도움말(FAQ)</string>
    <string name="support_title">문의 유형을 선택해 주세요</string>
    <string name="support_gpoint_reward">지포인트 적립</string>
    <string name="support_store">상점 구매</string>
    <string name="extra">기타</string>
    <string name="support_desc">고객 지원 업무시간 : 평일 오전 10시 ~ 오후 6시</string>
    <string name="error_network">네트워크 연결 오류</string>
    <string name="error_network_desc">서버 연결에 실패하였습니다. 네크워크 연결 확인 후 다시 시도해 주시기 바랍니다.</string>
    <string name="retry">재시도</string>
    <string name="review_title">해빗투굿 개선 프로그램</string>
    <string name="review_desc1">해빗투굿 잘 사용하고 계신가요? 이용자 분들의 의견을 통해 더 좋은 서비스를 제공하려고 합니다.</string>
    <string name="review_desc2">잠시만 시간내서 평가해 주시겠어요?</string>
    <string name="review_no">안 할래요;;</string>
    <string name="review_b_desc2">본 개선 프로그램 안내는 한번만 나옵니다. ^^</string>
</resources>