<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/outline_brightness_auto_black_18dp"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_ongoing"
            android:icon="@drawable/baseline_play_circle_outline_black_18dp"
            android:title="@string/nav_ongoing" />
        <item
            android:id="@+id/nav_expired"
            android:icon="@drawable/outline_check_circle_black_18dp"
            android:title="@string/nav_expired" />
    </group>

    <group>
        <item
            android:id="@+id/nav_walkthrough"
            android:icon="@drawable/info1"
            android:title="@string/nav_walkthrough" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_black_18dp"
            android:title="@string/nav_settings" />
    </group>

    <!--<item android:title="Communicate">-->
    <item>
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/outline_help_black_24dp"
                android:title="@string/about_title" />
        </menu>
    </item>
</menu>
