<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.co.gubed.habit2good.HabitsActivity">

    <item
        android:id="@+id/action_my_wallet"
        android:checkable="false"
        android:icon="@drawable/outline_account_balance_wallet_white_24dp"
        android:title="@string/action_my_wallet"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:checkable="false"
        android:icon="@drawable/outline_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:checkable="false"
        android:icon="@drawable/outline_help_outline_white_24dp"
        android:title="@string/action_help"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info"
        android:checkable="false"
        android:icon="@drawable/outline_info_white_24dp"
        android:title="@string/action_info"
        app:showAsAction="always" />
</menu>
