<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="@dimen/mt10"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mt10"
        >
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_default"
            android:text="@string/support_title"
            android:paddingTop="@dimen/mt20"
            android:gravity="center"
            android:paddingBottom="@dimen/mt25"
            />
        <Button
            android:id="@+id/btn_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_b_ok"
            android:text="@string/faq"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_default"
            android:gravity="center"
            android:layout_marginTop="@dimen/mt5"
            />
        <Button
            android:id="@+id/btn_cash_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_b_cancel"
            android:text="@string/support_gpoint_reward"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_default"
            android:gravity="center"
            android:layout_marginTop="@dimen/mt5"
            />
        <Button
            android:id="@+id/btn_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_b_cancel"
            android:text="@string/support_store"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_default"
            android:gravity="center"
            android:layout_marginTop="@dimen/mt5"
            />
        <Button
            android:id="@+id/btn_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_b_cancel"
            android:text="@string/extra"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_default"
            android:gravity="center"
            android:layout_marginTop="@dimen/mt5"
            />
        <!--
        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_layer"
            android:text="@string/question_close"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_desc"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/mt5"
            android:paddingBottom="@dimen/mt5"
            android:paddingLeft="@dimen/mt20"
            android:paddingRight="@dimen/mt20"
            />
        -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_desc"
            android:text="@string/support_desc"
            android:layout_marginTop="@dimen/mt20"
            android:textSize="12dp"
            android:gravity="center"
            android:paddingBottom="@dimen/mt10"
            />
    </LinearLayout>

</LinearLayout>