<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/dialog_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingTop="@dimen/space_16dp"
        android:paddingBottom="@dimen/space_16dp"
        android:text="@string/ht_contents"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_white_1000" />

    <TextView
        android:id="@+id/dialog_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center"
        android:paddingBottom="@dimen/default_margin"
        android:text="@string/ht_author"
        android:textColor="@color/text_desc"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/mt20"
        android:paddingBottom="@dimen/mt25"
        android:text="@string/ht_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_default"
        android:visibility="gone" />

</LinearLayout>