<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/mt20"
    android:paddingBottom="@dimen/mt10"
    android:focusableInTouchMode="true"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/mt30"
        android:paddingLeft="@dimen/mt30"
        android:paddingBottom="@dimen/mt15"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_default"
            android:text="@string/review_title"
            android:visibility="visible"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="@dimen/mt25"
        android:paddingLeft="@dimen/mt25"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dialog_desc"
            android:text="@string/review_desc1"
            android:visibility="visible"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/mt10"
            android:textColor="@color/dialog_desc"
            android:text="@string/review_desc2"
            android:visibility="visible"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mt30"
            android:gravity="center"
            >
            <RelativeLayout
                android:id="@+id/btn_yes"
                android:layout_width="200dp"
                android:layout_height="43dp"
                android:background="@drawable/btn_review_1"
                >
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_bad"
                android:layout_width="200dp"
                android:layout_height="43dp"
                android:background="@drawable/btn_review_2"
                android:layout_marginTop="@dimen/mt30"
                >
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/review_no"
            android:textColor="@color/dialog_desc"
            android:layout_marginTop="@dimen/mt30"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/mt30"
            android:textColor="@color/dialog_desc"
            android:text="@string/review_b_desc2"
            android:visibility="visible"
            />
    </LinearLayout>
</LinearLayout>