<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/mt20"
    android:paddingBottom="@dimen/mt10"
    android:focusableInTouchMode="true"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/mt10"
        android:paddingRight="@dimen/mt30"
        android:paddingLeft="@dimen/mt30"
        >
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dialog_title"
            android:text="@string/error_network"
            />
        <TextView
            android:id="@+id/dialog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/mt10"
            android:textColor="@color/dialog_desc"
            android:text="@string/error_network_desc"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/dialog_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="54dip"
        android:paddingRight="@dimen/mt20"
        android:paddingLeft="@dimen/mt20"
        android:visibility="visible"
        >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_ok"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:background="@drawable/btn_dialog"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAllCaps="false"
            android:textColor="@color/text_desc"
            android:text="@string/exit"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:background="@drawable/btn_dialog"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_desc"
            android:textAllCaps="false"
            android:text="@string/retry"
            android:visibility="visible"
            />
    </RelativeLayout>
</LinearLayout>